# nearby-linux

./: .bazelrc  MODULE.bazel  README.md
.antigravitycli/: 0a0a09ba-215b-4be2-ba5e-206e97ab4409.json
.claude/: settings.local.json
app/facade/: BUILD  mock_facade.c  nearby_service_bridge.cc  share_session_facade.h  share_session_service.h
app/ui-gtk/: dev.sh  meson.build
app/ui-gtk/data/: dev.quickshare.UbuntuShare.desktop  quick-share.desktop
app/ui-gtk/scratch/: round_icon.py
app/ui-gtk/src/: app_window.c  app_window.h  format_util.c  format_util.h  main.c  splash_window.c  splash_window.h  style.c  style.h  ui_state.c  ui_state.h  view_complete.c  view_failed.c  view_home.c  view_incoming.c  view_onboarding.c  view_settings.c  view_settings.h  view_transferring.c  views.h
docs/: ubuntu_quick_share_interop.md
internal/analytics/: BUILD
internal/base/: file_path.h
internal/encoding/: BUILD
internal/interop/: BUILD
internal/network/: url.cc
internal/platform/: mac_address.h  service_address.h
internal/platform/implementation/: BUILD  wifi_utils.cc
internal/platform/implementation/linux/: BUILD  atomic_boolean.h  atomic_reference.h  ble_medium.cc  ble_medium.h  bluetooth_adapter.cc  bluetooth_adapter.h  bluetooth_adapter_test.cc  bluez_dbus.cc  bluez_dbus.h  credential_storage.cc  credential_storage.h  crypto.cc  device_info.cc  device_info.h  device_info_test.cc  multi_thread_executor.cc  multi_thread_executor.h  paths.cc  paths.h  paths_test.cc  platform.cc  preferences_manager.cc  preferences_manager.h  preferences_manager_test.cc  preferences_repository.cc  preferences_repository.h  scheduled_executor.cc  scheduled_executor.h  single_thread_executor.h  system_clock.cc  timer.cc  timer.h  wifi_lan_medium.cc  wifi_lan_medium.h
internal/platform/implementation/shared/: BUILD  posix_condition_variable.cc
internal/platform/implementation/windows/: BUILD
internal/rpc/: BUILD
location/nearby/sharing/lib/account/: BUILD  account_manager.h
location/nearby/sharing/lib/rpc/: BUILD  grpc_async_client_factory.h  sharing_rpc_client.h
location/nearby/sharing/lib/sync/: BUILD  sync_binding_prefs.pb.h  sync_manager.h
sharing/: BUILD
sharing/certificates/: BUILD  nearby_share_certificate_manager_impl.cc  nearby_share_certificate_manager_impl_test.cc
sharing/internal/api/linux/: BUILD  sharing_platform_linux.cc  sharing_platform_linux.h
sharing/internal/base/: BUILD
sharing/internal/base/strings/: utf_string_conversions.h
util/hash/: BUILD  highway_fingerprint.h
